Fix z-index bug

--- a/frontend/fullstack_ui/css/style.css
+++ b/frontend/fullstack_ui/css/style.css
@@ -38,7 +38,7 @@ button:hover {
 #map {
   position: absolute;
   top: 100px;
-  z-index: -1;
+  z-index: 1;
   width: 100%;
   height: 400px;
 }
